# cmakekt

./: .gitignore  CMakeKt.cmake  CMakeLists.txt  README.md
.github/: dependencies.kt
.github/workflows/: build.yml  release.yml
test/: CMakeLists.txt
test/include/lib0/: lib.h  lib2.h
test/include/lib0/inner/: lib3.h
test/include/lib1/: library.h
test/src/: main.c  main2.c
